# Wisp

./: .gitignore  .gitmessage  CHANGELOG.md  Dockerfile  Makefile  README.md  WISP_FRAMEWORK_ISSUES.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  EXTENSIONS.md  EXTENSIONS_SUMMARY.md  FRAMEWORK_EXTENSIONS.md  Home.md  INDEX.md  INSTALLATION.md  MODULE_DEVELOPMENT.md  SERVICES.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  WISP_FRAMEWORK_LOGGING.md
examples/: bot_config_example.py  complete_bot_example.py  complete_enhanced_example.py  custom_module_example.py  enhanced_module_example.py  simple_bot.py
scripts/: bump_version.py  check_dependencies.py  dev.py  dev.sh  doctor.py  install-local.py  install-local.sh  migrate.sh  prod.sh  setup-dev.py  setup-dev.sh  test_compatibility.py  wait-for-db.sh
src/runner_bot/: __init__.py  main.py  settings.py
src/wisp_framework/: __init__.py  app.py  bot.py  config.py  context.py  exceptions.py  feature_flags.py  lifecycle.py  logging.py  module.py  registry.py  version.py
src/wisp_framework/core/: pipeline.py
src/wisp_framework/db/: __init__.py  async_helper.py  base.py  guild_data.py  models.py  session.py  stub.py
src/wisp_framework/events/: __init__.py  anti_abuse.py  router.py
src/wisp_framework/jobs/: __init__.py  queue.py  runner.py
src/wisp_framework/modules/: __init__.py  core_admin.py  health.py  insights.py  onboarding.py  ping.py
src/wisp_framework/observability/: __init__.py  logging.py  metrics.py  sentry.py
src/wisp_framework/plugins/: __init__.py  adapter.py  manifest.py  migrations.py  plugin.py  registry.py
src/wisp_framework/policy/: __init__.py  capabilities.py  decorators.py  engine.py
src/wisp_framework/ratelimit/: __init__.py  limiter.py
src/wisp_framework/services/: audit.py  (+8 more)
tests/: __init__.py  test_basic.py  test_pipeline.py  test_policy.py  test_ratelimit.py
wiki/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  EXTENSIONS.md  FRAMEWORK_EXTENSIONS.md  INDEX.md  INSTALLATION.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
(+22 files in other folders)
